# oracol-node

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
.maintain/: oracol-ensure-deps.sh
.maintain/docker/: Dockerfile  Dockerfile.aarch64-linux-gnu  Dockerfile.arm-linux-gnueabihf  Dockerfile.armv7-linux-gnueabihf  Dockerfile.x86_64-linux-gnu
.maintain/monitoring/alerting-rules/: alerting-rule-tests.yaml  alerting-rules.yaml
assets/: bytecodes.json  oracol-testnet.json  types.json
client/cli/: Cargo.toml
client/cli/src/: lib.rs
client/dvm/db/: Cargo.toml
client/dvm/db/src/: lib.rs
client/dvm/mapping-sync/: Cargo.toml
client/dvm/mapping-sync/src/: lib.rs  worker.rs
client/dvm/rpc/: Cargo.toml
client/dvm/rpc/src/: eth.rs  eth_pubsub.rs
client/dvm/rpc/src/overrides/: mod.rs  schema_v1_override.rs
fork/: index.js  package-lock.json  package.json
frame/balances/: Cargo.toml  README.adoc
frame/balances/rpc/: Cargo.toml
frame/balances/rpc/runtime-api/: Cargo.toml
frame/balances/rpc/runtime-api/src/: lib.rs
frame/balances/rpc/src/: lib.rs
frame/balances/src/: lib.rs  tests.rs  tests_local.rs
frame/bridge/ethereum/backing/: Cargo.toml  README.md
frame/bridge/ethereum/backing/src/: lib.rs  mock.rs  test_with_linear_relay.rs  test_with_relay.rs
frame/bridge/ethereum/issuing/: Cargo.toml
frame/bridge/ethereum/issuing/contract/: Cargo.toml
frame/bridge/ethereum/issuing/contract/src/: lib.rs
frame/bridge/ethereum/issuing/src/: lib.rs
frame/bridge/ethereum/linear-relay/: Cargo.toml  README.md  build.rs
frame/bridge/ethereum/linear-relay/src/: lib.rs  mock.rs  tests.rs
frame/bridge/ethereum/relay/: Cargo.toml
frame/bridge/ethereum/relay/src/: lib.rs  mmr.rs  mock.rs  test_data.rs  tests.rs
frame/bridge/oldoxor/backing/: Cargo.toml
frame/bridge/oldoxor/backing/src/: lib.rs
frame/bridge/oldxor/issuing/: Cargo.toml
frame/bridge/oldxor/issuing/src/: lib.rs  mock.rs  tests.rs
frame/bridge/relay-authorities/: Cargo.toml
frame/bridge/relay-authorities/src/: lib.rs  mock.rs  test.rs
frame/bridge/relayer-game/: Cargo.toml  README.md
frame/claims/: Cargo.toml
frame/claims/src/: address.rs  lib.rs
frame/democracy/: Cargo.toml
frame/democracy/src/: lib.rs  tests.rs
frame/democracy/src/tests/: lock_voting.rs
frame/dvm/: Cargo.toml
frame/dvm-dynamic-fee/: Cargo.toml
frame/dvm/rpc/: Cargo.toml
frame/dvm/rpc/runtime-api/: Cargo.toml
frame/dvm/rpc/runtime-api/src/: lib.rs
frame/dvm/rpc/src/: eth.rs
frame/dvm/src/: account_basic.rs  lib.rs  mock.rs  tests.rs
frame/elections-phragmen/: Cargo.toml  README.md
frame/elections-phragmen/src/: lib.rs
frame/evm/: Cargo.toml
frame/evm/precompile/: Cargo.toml
frame/evm/precompile/contracts/blake2/: Cargo.toml
frame/evm/precompile/contracts/bn128/: Cargo.toml
frame/evm/precompile/contracts/dispatch/: Cargo.toml
frame/evm/precompile/contracts/dispatch/src/: lib.rs
frame/evm/precompile/contracts/ed25519/: Cargo.toml
frame/evm/precompile/contracts/empty/: Cargo.toml
frame/evm/precompile/contracts/empty/src/: lib.rs
frame/evm/precompile/contracts/issuing/: Cargo.toml
frame/evm/precompile/contracts/issuing/src/: lib.rs
frame/evm/precompile/contracts/modexp/: Cargo.toml
frame/evm/precompile/contracts/oxor/: Cargo.toml
frame/evm/precompile/contracts/oxor/src/: lib.rs
frame/evm/precompile/contracts/sha3fips/: Cargo.toml
frame/evm/precompile/contracts/sha3fips/src/: lib.rs
frame/evm/precompile/contracts/simple/: Cargo.toml
frame/evm/precompile/contracts/withdraw/: Cargo.toml
frame/evm/precompile/contracts/withdraw/src/: lib.rs
frame/evm/precompile/src/: lib.rs
frame/evm/src/: lib.rs  tests.rs
frame/evm/src/runner/: stack.rs
frame/header-mmr/: Cargo.toml
frame/header-mmr/rpc/: Cargo.toml
frame/header-mmr/rpc/runtime-api/: Cargo.toml
frame/header-mmr/rpc/runtime-api/src/: lib.rs
frame/header-mmr/rpc/src/: lib.rs
frame/header-mmr/src/: lib.rs  mock.rs  tests.rs
frame/staking/: CHANGELOG.md  Cargo.toml  README.md
frame/staking/rpc/: Cargo.toml
frame/staking/rpc/runtime-api/: Cargo.toml
frame/staking/rpc/runtime-api/src/: lib.rs
frame/staking/rpc/src/: lib.rs
frame/staking/src/: inflation.rs  inflation_tests.rs  lib.rs  mock.rs  oracol_tests.rs  slashing.rs  substrate_tests.rs
frame/support/: Cargo.toml
frame/support/src/: lib.rs  macros.rs  structs.rs  testing.rs  tests.rs  traits.rs
frame/treasury/: Cargo.toml  README.adoc
frame/treasury/src/: lib.rs  mock.rs  tests.rs
frame/vesting/: Cargo.toml
frame/vesting/src/: lib.rs
modules/currencies/: Cargo.toml
modules/currencies/src/: lib.rs  mock.rs
modules/evm/: Cargo.toml
modules/evm-accounts/: Cargo.toml
modules/evm-accounts/src/: lib.rs  mock.rs
modules/evm-bridge/: Cargo.toml
modules/evm/rpc/: Cargo.toml
modules/evm/src/: mock.rs
modules/example/: Cargo.toml
modules/poc/: Cargo.toml
modules/poc/src/: benchmarking.rs  tests.rs  weights.rs
modules/support/: Cargo.toml
modules/transaction_payment/: Cargo.toml
modules/transaction_payment/src/: lib.rs  mock.rs  tests.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
primitives/: Cargo.toml
primitives/consensus/: Cargo.toml
primitives/ethereum-primitives/: Cargo.toml
primitives/ethereum-primitives/src/: encoded.rs  error.rs  ethashproof.rs  header.rs  lib.rs  pow.rs  receipt.rs
primitives/evm/: Cargo.toml
primitives/merkle-patricia-trie/: Cargo.toml
primitives/merkle-patricia-trie/src/: db.rs  error.rs  lib.rs  nibbles.rs  node.rs  proof.rs  tests.rs  trie.rs
primitives/relay/: Cargo.toml
primitives/relay/src/: lib.rs  relay_authorities.rs  relayer_game.rs
primitives/rpc/: Cargo.toml
primitives/src/: lib.rs  tests.rs
primitives/storage/: Cargo.toml
rpc/: nginx.conf  rpc.py
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/src/: lib.rs
runtime/tests/: integration_test.rs
script_tests/: package-lock.json
script_tests/tests/: test-web3api.js  test_oxor.js
(+12 files in other folders)
