[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Oracol CLI interface."
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-cli"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
serde = { version = "1.0.125", features = ["derive"] }
toml  = { version = "0.5.7" }
# substrate
sc-cli        = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sc-client-api = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sc-service    = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sc-tracing    = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
