[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "FRAME pallet to manage balances"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-balances"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
log   = { version = "0.4.14" }
paste = { version = "1.0.5", optional = true }
serde = { version = "1.0.125", optional = true }
# oracol
oracol-balances-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
oracol-support                  = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
# substrate
pallet-transaction-payment = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-core                    = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io                      = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
oracol-std  = [
	"oracol-balances-rpc-runtime-api/std",
	"oracol-support/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"paste",
	"frame-support/try-runtime",
]
