[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "FRAME pallet for democracy"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-democracy"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.125", optional = true, features = ["derive"] }
# oracol
oracol-support = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io         = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
# crates
hex-literal = "0.3.1"
# oracol
oracol-balances = { path = "../balances" }
oracol-support  = { features = ["easy-testing"], path = "../support" }
# substrate
pallet-scheduler     = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-core              = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-storage           = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
substrate-test-utils = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"codec/std",
	"serde",
	"oracol-support/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
