[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Dynamic fee handling for EVM."
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "dvm-dynamic-fee"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"


[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
serde = { version = "1.0.123", default-features = false, features = ["derive"], optional = true }

frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-core       = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-inherents  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]
std     = [
	"codec/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]
