[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Ethereum compatibility full block processing emulation pallet for Oracol."
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "dvm-ethereum"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
array-bytes    = { version = "1.1.0" }
codec          = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
ethereum       = { version = "0.7.1", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.11.0", default-features = false }
evm            = { version = "0.25.0", default-features = false, features = ["with-codec"] }
libsecp256k1   = { version = "0.3.5", default-features = false }
log            = { version = "0.4.14", optional = true }
rlp            = { version = "0.5.0", default-features = false }
serde          = { version = "1.0.125", optional = true, default-features = false }
sha3           = { version = "0.9.1", default-features = false }
# oracol
oracol-evm        = { default-features = false, path = "../evm" }
oracol-support    = { default-features = false, path = "../support" }
dp-evm              = { default-features = false, path = "../../primitives/evm" }
dp-storage          = { default-features = false, path = "../../primitives/storage" }
dp_consensus        = { default-features = false, path = "../../primitives/consensus" }
dvm-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
# substrate
frame-support    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system     = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
pallet-timestamp = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-core          = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io            = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime       = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std           = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
# oracol
oracol-balances                = { path = "../balances" }
oracol-evm-precompile-simple   = { path = "../evm/precompile/contracts/simple" }
oracol-evm-precompile-withdraw = { path = "../evm/precompile/contracts/withdraw" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
	"evm/std",
	"libsecp256k1/std",
	"rlp/std",
	"serde",
	"sha3/std",
]
oracol-std  = [
	"oracol-evm/std",
	"oracol-support/std",
	"dp-evm/std",
	"dp_consensus/std",
	"dvm-rpc-runtime-api/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

try-runtime = [
	"log",
	"frame-support/try-runtime",
]
