[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "FRAME pallet based on seq-Phragmén election method."
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-elections-phragmen"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
log   = { version = "0.4.14" }
serde = { version = "1.0.125", optional = true }
# oracol
oracol-support = { default-features = false, path = "../support" }
# substrate
frame-support     = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system      = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-npos-elections = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std            = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
# crates
hex-literal = { version = "0.3.1" }
# oracol
oracol-balances = { path = "../balances" }
oracol-support  = { path = "../support", features = ["easy-testing"] }
# substrate
sp-core              = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io                = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
substrate-test-utils = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
oracol-std  = ["oracol-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-std/std",
]
