[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Support code for Oracol runtime"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-support"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec                 = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
impl-trait-for-tuples = { version = "0.2.1" }
num-traits            = { version = "0.2.14", default-features = false }
# oracol
ethereum-primitives = { default-features = false, path = "../../primitives/ethereum-primitives" }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
sp-core = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"num-traits/std",
]
oracol-std  = ["ethereum-primitives/std"]
substrate-std = [
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]

easy-testing = []
