[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "FRAME pallet for manage vesting"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-vesting"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec      = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
serde      = { version = "1.0.125", optional = true }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
# oracol
oracol-support = { default-features = false, path = "../support" }

[dev-dependencies]
# crates
hex-literal = "0.3.1"
# substrate
sp-core    = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io      = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-storage = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
# oracol
oracol-balances = { path = "../balances" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
oracol-std  = ["oracol-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
