[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Ethereum primitives for Oracol Relay"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "ethereum-primitives"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
array-bytes     = { version = "1.1.0" }
codec           = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
ethbloom        = { version = "0.11.0", default-features = false, features = ["codec", "rlp"] }
ethereum-types  = { version = "0.11.0", default-features = false, features = ["codec", "rlp"] }
fixed-hash      = { version = "0.7.0", default-features = false }
impl-codec      = { version = "0.5.0", default-features = false }
impl-rlp        = { version = "0.3.0", default-features = false }
keccak-hash     = { version = "0.7.0", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["codec", "rlp"] }
rlp             = { version = "0.5.0", default-features = false }
rlp-derive      = { version = "0.1.0" }
serde           = { version = "1.0.125", optional = true, features = ["derive"] }
# oracol
ethash               = { default-features = false, git = "https://github.com/ProjectXOR/ethash" }
merkle-patricia-trie = { default-features = false, path = "../merkle-patricia-trie" }
# substrate
sp-io      = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std     = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
# crates
keccak-hasher = { version = "0.15.3" }
serde_json    = { version = "1.0.64" }
# github
triehash = { version = "0.8.4" }
# substrate
frame-support = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"ethbloom/std",
	"ethereum-types/std",
	"ethereum-types/serialize",
	"fixed-hash/std",
	"impl-codec/std",
	"impl-rlp/std",
	"keccak-hash/std",
	"primitive-types/std",
	"rlp/std",
	"serde",
]
oracol-std  = [
	"ethash/std",
	"merkle-patricia-trie/std",
]
substrate-std = [
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

deserialize  = []
with-new-dag = []
