[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "RPC traits of Ethereum."
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "dp-rpc"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
ethereum-types      = { version = "0.11.0" }
jsonrpc-core        = { version = "15.1.0" }
jsonrpc-core-client = { version = "15.1.0" }
jsonrpc-derive      = { version = "15.1.0" }
jsonrpc-pubsub      = { version = "15.1.0" }
rustc-hex           = { version = "2.1.0" }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = { version = "1.0" }
