[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Dvm database backend"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "dc-db"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec        = { package = "parity-scale-codec", version = "2.0.1", features = ["derive"] }
kvdb         = { version = "0.9.0" }
kvdb-rocksdb = { version = "0.11.0" }
parking_lot  = { version = "0.11.1" }
# substrate
sp-core     = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-database = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime  = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
