[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Ethereum RPC (web3) compatibility layer for Oracol."
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "dc-rpc"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
array-bytes         = { version = "1.1.0" }
codec               = { package = "parity-scale-codec", version = "2.0.1" }
ethereum            = { version = "0.7.1", features = ["with-codec"] }
ethereum-types      = { version = "0.11.0" }
evm                 = { version = "0.25.0" }
futures             = { version = "0.3.13", features = ["compat"] }
jsonrpc-core        = { version = "15.1.0" }
jsonrpc-core-client = { version = "15.1.0" }
jsonrpc-derive      = { version = "15.1.0" }
jsonrpc-pubsub      = { version = "15.1.0" }
libsecp256k1        = { version = "0.3" }
log                 = { version = "0.4.14" }
rand                = { version = "0.7" }
rlp                 = { version = "0.5.0" }
sha3                = { version = "0.8" }
# oracol
dc-db               = { path = "../db" }
dp-rpc              = { path = "../../../primitives/rpc" }
dp-storage          = { path = "../../../primitives/storage/" }
dp_consensus        = { path = "../../../primitives/consensus/" }
dvm-ethereum        = { path = "../../../frame/dvm" }
dvm-rpc-core        = { path = "../../../frame/dvm/rpc" }
dvm-rpc-runtime-api = { path = "../../../frame/dvm/rpc/runtime-api" }
# substrate
sc-client-api       = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sc-network          = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sc-rpc              = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sc-service          = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-api              = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-blockchain       = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io               = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime          = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-storage          = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-transaction-pool = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
rpc_binary_search_estimate = []
