[package]
authors     = ["Oracol XOR Network <contact@oracol.org>"]
description = "Relayer Authorities Protocal Implementation"
edition     = "2018"
homepage    = "https://oracol.org/"
license     = "GPL-3.0"
name        = "oracol-relay-authorities"
readme      = "README.md"
repository  = "https://github.com/ProjectXOR/oracol-node"
version     = "0.0.1"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.125", optional = true }
# oracol
oracol-relay-primitives = { default-features = false, path = "../../../primitives/relay" }
oracol-support          = { default-features = false, path = "../../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
frame-system  = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-runtime    = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-std        = { default-features = false, git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[dev-dependencies]
# crates
array-bytes = { version = "1.1.0" }
# oracol
oracol-balances = { path = "../../balances" }
oracol-support  = { path = "../../support" }
# substrate
sp-core = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }
sp-io   = { git = "https://github.com/ProjectXOR/substrate.git", branch = "latest" }

[features]
default = ["std"]

std = [
	"crates-std",
	"oracol-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
oracol-std  = [
	"oracol-relay-primitives/std",
	"oracol-support/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
